WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
Bug 36413
[Qt] RenderTheme: fix size adjustment for text fields
https://bugs.webkit.org/show_bug.cgi?id=36413
Summary
[Qt] RenderTheme: fix size adjustment for text fields
Jakub Wieczorek
Reported
2010-03-20 10:07:40 PDT
RenderThemeQt.cpp "hardcodes" the preferred dimensions for text fields but in fact it is not necessary, because WebCore already does that (20 cols x 2 rows for text areas and 20 cols x 1 row for text fields). To match other ports the size shouldn't be altered by the render theme, I believe. Moreover, the padding for text fields is not properly applied: - RenderTheme should also change the horizontal padding. - it should work the same for text areas - it does not now, which causes rendering issues with the Oxygen style.
Attachments
patch
(7.91 KB, patch)
2010-03-20 10:17 PDT
,
Jakub Wieczorek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jakub Wieczorek
Comment 1
2010-03-20 10:17:19 PDT
Created
attachment 51222
[details]
patch With this change, 3 test results had to be updated but I'm not sure if there isn't anything left to update.
Giacomo
Comment 2
2010-03-20 14:13:37 PDT
Is this related to:
https://bugs.webkit.org/show_bug.cgi?id=36030
?
Simon Hausmann
Comment 3
2010-03-21 15:48:09 PDT
Tor Arne, could you take a look at this one? Thanks :)
Eric Seidel (no email)
Comment 4
2010-03-25 01:50:24 PDT
Comment on
attachment 51222
[details]
patch OK.
Jakub Wieczorek
Comment 5
2010-03-25 10:30:55 PDT
Comment on
attachment 51222
[details]
patch Clearing flags on attachment: 51222 Committed
r56555
: <
http://trac.webkit.org/changeset/56555
>
Jakub Wieczorek
Comment 6
2010-03-25 10:31:04 PDT
All reviewed patches have been landed. Closing bug.
Giacomo
Comment 7
2010-03-25 12:19:12 PDT
***
Bug 36030
has been marked as a duplicate of this bug. ***
Simon Hausmann
Comment 8
2010-03-26 08:41:20 PDT
Revision
r56555
cherry-picked into qtwebkit-2.0 with commit cd23c453d081a795f63d594e3da8b2b580726ab7
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug