2010-03-25  Jakub Wieczorek  <jwieczorek@webkit.org>

Reviewed by Eric Seidel.

        [Qt] RenderTheme: fix size adjustment for text fields
        https://bugs.webkit.org/show_bug.cgi?id=36413

        Update test results after RenderTheme changes.

        * platform/qt/fast/forms/textarea-placeholder-pseudo-style-expected.txt:
        * platform/qt/fast/forms/textarea-placeholder-set-attribute-expected.txt:
        * platform/qt/fast/forms/textarea-placeholder-set-value-expected.txt:
2010-03-25  Jakub Wieczorek  <jwieczorek@webkit.org>

        Reviewed by Eric Seidel.

        [Qt] RenderTheme: fix size adjustment for text fields
        https://bugs.webkit.org/show_bug.cgi?id=36413

        To match other ports, remove the hardcoded dimensions for text fields so that
        the default ones from WebCore can be used.
        Properly apply the correct padding to text areas - this fixes their appearance
        with the Oxygen style.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::computeSizeBasedOnStyle):

Canonical link: https://commits.webkit.org/47849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56555 268f45cc-cd09-0410-ab3c-d52691b4dbfc